--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,8 +21,7 @@
         "kind": "build",
         "isDefault": true
       },
-      "detail": "デバッガーによって生成されたタスク。"
+      "detail": "コンパイラ: /usr/bin/g++"
     }
-  ],
-  "version": "2.0.0"
+  ]
 }
